# flashdreams

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEV.md  LICENSE  NOTICE  PERFORMANCE.md  README.md  REUSE.toml  SECURITY.md  THIRD-PARTY-NOTICES  pyproject.toml  reuse.toml  update_method.py
flashdreams/: PYPI_README.md  pyproject.toml
flashdreams/examples/: precompute_alpadreams_embeddings.py  run_alpadreams.py  run_causal_wan21.py  run_causal_wan22.py  run_lingbot_world.py  run_wan21.py
flashdreams/flashdreams/: _version.py
flashdreams/flashdreams/_pytest_plugins/: marker_enforcement.py
flashdreams/flashdreams/configs/: __init__.py  manifest.py  test_suite.py
flashdreams/flashdreams/core/attention/: __init__.py  cp.py  kvcache.py  native.py  ring.py  rope.py
flashdreams/flashdreams/core/checkpoint/: load.py  remap.py
flashdreams/flashdreams/core/distributed/: __init__.py  context_parallel.py
flashdreams/flashdreams/core/experimental/: kvcache.py  test_block_kvcache.py
flashdreams/flashdreams/core/io/: hf.py  s3_filesystem.py  s3_sync.py
flashdreams/flashdreams/infra/: adapter.py  compile.py  cuda_graph.py  profiler.py  runner.py  runner_io.py
flashdreams/flashdreams/infra/acceleration/: __init__.py  cuda_graph_dispatch.py  encoder_lifecycle.py  frame_prefetch.py  overlap.py  prewarm.py
flashdreams/flashdreams/infra/config/: __init__.py  base.py
flashdreams/flashdreams/infra/decoder/: __init__.py  base.py
flashdreams/flashdreams/infra/encoder/: __init__.py  base.py
flashdreams/flashdreams/infra/pipeline/: __init__.py  base.py
flashdreams/flashdreams/infra/postprocess/: __init__.py  base.py  stream.py
flashdreams/flashdreams/plugins/: registry.py
flashdreams/flashdreams/quality/: __init__.py  clip_compare.py
flashdreams/flashdreams/quality/video_quality/: manifest.py  run_regression.py
flashdreams/flashdreams/recipes/alpadreams/: config.py  pipeline.py  runner.py
flashdreams/flashdreams/recipes/lingbot_world/: config.py  pipeline.py
flashdreams/flashdreams/recipes/taehv/: __init__.py  impl.py
flashdreams/flashdreams/recipes/template/: README.md  config.py  decoder.py  encoder.py  runner.py
flashdreams/flashdreams/recipes/wan/: pipeline.py
flashdreams/flashdreams/scripts/: cli.py
flashdreams/flashdreams/serving/realtime/: __init__.py  frame_bus.py  input.py  media.py  timing.py
flashdreams/flashdreams/serving/webrtc/: bootstrap.py  controls.py  manager.py  media.py  messages.py  runtime.py  server.py
flashdreams/tests/: perf_rope.py  test_alpadreams.py  test_attention.py  test_clip_compare.py  test_context_parallel_strategy.py  test_cuda_graph_dispatch.py  test_distributed_logging.py  test_encoder_lifecycle.py  test_frame_prefetch.py  test_hf_io.py  test_internal_storage.py  test_kvcache.py  test_model_instantiation.py  test_overlap.py  test_postprocess_presets.py  test_postprocess_stream.py  test_prewarm.py  test_rank_orchestration.py  test_realtime_serving.py  test_realtime_timing.py  test_recipe_configs.py  test_recipe_plugins.py  test_rope_kernel.py  test_runner_io.py  test_runner_postprocess.py  test_s3_sync.py  test_template.py  test_vae.py  test_video_postprocess.py  test_video_quality_regression.py  test_video_vae_tyro_cli.py  test_wan_context_parallel.py  test_wan_lingbot_context_parallel.py  test_wan_pipeline.py  test_webrtc_bootstrap.py  test_webrtc_manager.py  test_webrtc_serving.py
flashdreams/tests/scheduler/: _check_no_sync.py  _profile_scheduler.py  test_scheduler_equivalence.py
flashdreams/tests/taehv/: _profile_taehv.py  impl_reference.py  test_taehv_equivalence.py
flashdreams/tests/wanvae/: _profile_wan_vae.py  impl_reference.py  test_wan_vae_equivalence.py
integrations/alpadreams/ludus-renderer/: README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
integrations/alpadreams/ludus-renderer/docs/: interop-optimization-roadmap.md
integrations/alpadreams/ludus-renderer/examples/: benchmark_cache.py  benchmark_gpu_parquet.py  benchmark_interop.py  benchmark_renderer.py  compare_renderers.py  nvjpeg_encode_example.py  preprocess_scene_cache.py  profile_gpu_parquet.py  render_bev_with_front.py  render_hdmap_scene.py  render_mirror_augmented.py  render_multi_scene.py  test_scene_cache.py
integrations/alpadreams/ludus-renderer/ludus_renderer/: __init__.py  augmentation.py  clipgt.py  collision.py  convert.py  gpu_parquet.py  nvjpeg.py  render_utils.py  renderer.py  scene.py  scene_cache.py  util.py
integrations/alpadreams/ludus-renderer/scripts/: detect_collisions.py  detect_collisions_batched.py  launch_collision_slurm.py
integrations/alpadreams/ludus-renderer/tests/: test_nvjpeg.py  (+2 more)
integrations/mira/: README.md  pyproject.toml
integrations/mira/mira_integration/: __init__.py  action.py  config.py  decoder.py  encoder.py  modules.py  network.py  pipeline.py  runner.py  scheduler.py  scripted.py  transformer.py  weights.py
integrations/mira/tests/: test_pipeline.py  test_smoke.py  test_tiny_attention.py  test_webrtc.py
integrations/streaming_ws/: README.md  pyproject.toml
integrations/streaming_ws/streaming_ws/: __init__.py  __main__.py  client.py  opencv_viewer.py  playout.py  server.py  stub_frames.py  viser_app.py
integrations/streaming_ws/tests/: test_streaming_ws_protocol.py
test-suite-demos/: __init__.py  _adapter.py  public-manifest.yml  pyproject.toml  reference.md
test-suite-demos/camera_control_i2v/: adapter.py  reference.md
test-suite-demos/camera_control_i2v/test-suite-configs/: demo-manifest.yml
test-suite-demos/image_to_video/: adapter.py  reference.md
test-suite-demos/image_to_video/test-suite-configs/: demo-manifest.yml
test-suite-demos/interactive_drive/: adapter.py  reference.md
test-suite-demos/interactive_drive/test-suite-configs/: demo-manifest.yml
test-suite-demos/text_to_video/: __init__.py  adapter.py  reference.md
test-suite-demos/text_to_video/test-suite-configs/: demo-manifest.yml
test-suite-demos/video_super_resolution/: adapter.py  reference.md
test-suite-demos/video_super_resolution/test-suite-configs/: demo-manifest.yml
(+817 files in other folders)
