# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdreams-mira"
version = "0.1.0"
description = "MIRA Mini interactive world-model integration for FlashDreams."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flashdreams[serving]",
    "ftfy",
    "nvtx",
    "omegaconf",
    "regex",
    "scikit-learn",
    "submitit",
    "termcolor",
    "torchmetrics>=1.0",
]

[tool.uv.sources]
flashdreams = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mira-webrtc = "mira_integration.webrtc.server:main"

[project.entry-points."flashdreams.runner_configs"]
mira = "mira_integration.configs:RUNNER_MIRA"

[tool.setuptools.packages.find]
include = ["mira_integration*"]
exclude = ["tests"]

[tool.setuptools.package-data]
"mira_integration.configs" = ["*.yaml"]
"mira_integration.webrtc.web" = ["*.html", "*.css", "*.js"]
