[project]
name = "ludus-renderer"
version = "0.9.0"
description = "Ludus Renderer - GPU-native F-theta mesh shader rendering"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "NVIDIA"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.0",
    "pandas",
    "pyarrow",
    "scipy",
    "pillow",
    "PyNvVideoCodec",
    "setuptools",
    "ninja>=1.13.0",
    "nvidia-nvcomp-cu12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "imageio-ffmpeg",
    "opencv-python",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ludus_renderer",
    "ludus_renderer._ops",
    "ludus_renderer.torch",
    "ludus_renderer.torch.api",
]

[tool.setuptools.package-data]
"ludus_renderer" = [
    "_cpp/common/*.h",
    "_cpp/common/*.cpp",
    "_cpp/render/*.h",
    "_cpp/render/*.cpp",
    "_cpp/render/*.cu",
    "_cpp/bindings/*.h",
    "_cpp/bindings/*.inl",
    "_cpp/bindings/*.cpp",
    "_cpp/nvjpeg/*.h",
    "_cpp/nvjpeg/*.cpp",
    "_cpp/nvjpeg/*.cu",
    "_cpp/loader/*.h",
    "_cpp/loader/*.cpp",
    "_cpp/loader/*.cu",
]
